[tool.poetry]
name = "unbound-keycontrol-client-api"
version = "0.2.0"
description = ""
authors = ["Jerod Gawne <jerodgawne@gmail.com>"]

[[tool.poetry.source]]
name = '53'
url = 'http://slflokydcaims01.info53.com:3141/root/pypi/+simple/'
default = true

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.5"
#base-client-api = "^1.0"
pydantic = "^1.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-asyncio = "^0.14"
pytest-cov = "^2.11"
pytest-runner = "^5.3"
twine = "^3.3"
# until base is published
aiodns = "^2.0"
aiofiles = "^0.6"
aiohttp = "^3.7"
cchardet = "^2.1"
python-rapidjson = "^1.0"
tenacity = "^7.0"
toml = "^0.10"
brotlipy = "^0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
