[tool.poetry]
name = "unbound-key-control-client-api"
version = "0.3.0"
description = "Client API for Unbound Key Control"
authors = ["Jerod Gawne <jerodgawne@gmail.com>"]

[[tool.poetry.source]]
name = '53'
url = 'http://slflokydcaims01.info53.com:3141/root/pypi/+simple/'
default = true

[tool.poetry.dependencies]
#base-client-api = "^2.0"
loguru = "^0.5"
pydantic = "^1.8"
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-asyncio = "^0.14"
pytest-cov = "^2.11"
pytest-runner = "^5.3"
twine = "^3.3"
# until base is published
aiodns = "^2.0"
aiofiles = "^0.6"
aiohttp = "^3.7"
brotlipy = "^0.7"
cchardet = "^2.1"
python-rapidjson = "^1.0"
rich = "^9.13.0"
tenacity = "^7.0"
toml = "^0.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
